# phxtool

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
crates/phxtool/: Cargo.toml
crates/phxtool-cli/: Cargo.toml
crates/phxtool-cli/src/: cmd_era.rs  cmd_ugx.rs  cmd_wwise.rs  cmd_xmb.rs  main.rs
crates/phxtool-cli/src/commands/: bdt.rs  ecf.rs  era.rs  gfx.rs  mod.rs  ugx.rs  wwise.rs  xmb.rs
crates/phxtool/src/: era_ops.rs  error.rs  lib.rs
crates/phxtool/src/ops/: bdt.rs  ecf.rs  era.rs  mod.rs  scaleform.rs  ugx.rs  util.rs  wwise.rs  xmb.rs
